Fix some weird z-index issues

--- a/app/assets/sass/_header.scss
+++ b/app/assets/sass/_header.scss
@@ -1,6 +1,7 @@
 header.site-header {
     position: fixed;
     top: 0;
+    z-index: 400;
     height: 1.5*$padding;
     line-height: 1.5*$padding;
     padding: 0 $padding 0 20%;
